--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -1,13 +1,13 @@
 ---
 import Section from "../Section.astro"
 
-import { skills } from "@cv"
+import { skills, titlesSections } from "@cv"
 
 
 
 ---
 
-<Section title="Skills">
+<Section title={titlesSections.Skills}>
   <ul>
 
       {
