agregada traduccion al español

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,7 +1,7 @@
 ---
 import Section from "../Section.astro"
-
-import { basics, titlesSections } from "@cv"
+import { basics, titlesSections } from "cvEs.json"
+// import { basics, titlesSections } from "@cv"
 const { summary } = basics
 ---
 
