--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,5 +1,6 @@
 ---
-import { basics } from "@cv"
+// import { basics } from "@cv"
+import { basics } from "cvEs.json"
 import Section from "@/components/Section.astro"
 import WorldMap from "@/icons/WorldMap.astro"
 
