--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,8 @@ import Experience from "@/components/sections/Experience.astro"
 import Hero from "@/components/sections/Hero.astro"
 import Skills from "@/components/sections/Skills.astro"
 
-import { basics } from "@cv"
+// import { basics } from "@cv"
+import { basics } from "cvEs.json"
 const { name, label } = basics
 ---
 
