--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,7 +1,7 @@
 ---
 import Section from "../Section.astro"
-
-import { work, titlesSections } from "@cv"
+import { work,titlesSections } from "cvEs.json"
+// import { work, titlesSections } from "@cv"
 ---
 
 <Section title={titlesSections.Experiencie}>
