--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -1,7 +1,7 @@
 ---
 import Section from "../Section.astro"
-
-import { skills, titlesSections } from "@cv"
+import { skills, titlesSections } from "cvEs.json"
+// import { skills, titlesSections } from "@cv"
 
 
 
