actualiza dependencias y mejora la sección de experiencia en el CV

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -14,7 +14,12 @@ import { work,titlesSections } from "cvEs.json"
           const endMonth = new Date(endDate).toLocaleString('en-EN', { month: "short" });
           const endYear =
             endDate != null ? new Date(endDate).getFullYear() : "Actual"
-          const years = `${startMonth} ${startYear} - ${endMonth} ${endYear}`
+          if (!endYear) {
+            var realEndDate = "Actual"
+          } else {
+            var realEndDate = `${endMonth} ${endYear}`
+          }
+          const years = `${startMonth} ${startYear} - ${realEndDate}`
 
           return (
             <li>
